--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* General Styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: #F7EFE5;
+    background-color: #1B1833;
     color: #674188;
     margin: 0;
     padding: 0;
@@ -9,12 +9,20 @@ body {
 }
 
 h1 {
-    color: #e92ab9;
+    color: #dd75c3;
     margin-top: 20px;
+    font-size: 2.7em; /* Optional: adjust the size of h1 */
+    text-shadow: 0 0 10px rgba(227,46,255,0.57), 0 0 20px rgba(227,46,255,0.57), 0 0 30px rgba(227,46,255,0.57);
 }
 
+/* Optional: Hover effect to enhance the glow when the user hovers over the h1 */
+h1:hover {
+    text-shadow: 0 0 10px rgba(227,46,255,0.57), 0 0 20px rgba(227,46,255,0.57), 0 0 30px rgba(227,46,255,0.57), 0 0 40px rgba(227,46,255,0.57);
+}
+
+
 h2 {
-    color: #C8A1E0;
+    color: #F29F58;
     margin: 10px 0;
 }
 
@@ -31,6 +39,9 @@ img {
     border-radius: 50%;
     margin-top: 10px;
 }
+img:hover{
+    box-shadow: 0 0 3px 3px #E2BFD9;
+}
 
 /* Sections */
 section {
@@ -38,11 +49,16 @@ section {
     padding: 20px;
     width: 80%;
     background-color: #E2BFD9;
-    border-radius: 8px;
+    
+    border-radius: 10px;
+}
+section:hover{
+    transform: scale(1.01);
 }
 
 h3 {
     color: #674188;
+    font-size: 1.5em;
 }
 
 ul {
@@ -57,6 +73,14 @@ ul li {
     border-radius: 4px;
 }
 
+.project-link{
+    text-decoration: none; /* Remove underline */ /* Harmonize color with headings */
+    /* font-size: 1.4em; Keep font size slightly larger for emphasis */
+    margin-bottom: 10px; /* Add spacing between links */
+    display: block; /* Ensure links don't stretch */
+}
+
+
 /* Links */
 a {
     text-decoration: none;
@@ -65,5 +89,5 @@ a {
 }
 
 a:hover {
-    color: #E2BFD9;
+    color: #e92ab9;
 }
